# fhirai

./: README.md  devhelp.md  mcptool2.txt
infra/: docker-compose.yml
infra/Test/Hapi/: Patient.http  Practitioner.http  Test-Appointment.http  patient.json  test.http
infra/Test/PlainText/: Observation.txt  subject.txt  subject.txt.fhir
src/agents/: Dockerfile  README.md  main.py  pyproject.toml  test_api.http
src/agents/docs/: plan-fhir-agent.md
src/agents/fhir_agent/: config.py  feedback.py  fhir_curd_operations.py  fhir_mapping.py  fhir_processor.py  llm_provider.py  mapper.py  preprocessor.py  storage.py  validator.py
src/agents/tests/: test_mapper.py
src/hapi_mcpserver/: README.md  client.py  generate_mcp_tools.py  generate_mcp_toolsV1.py  generate_mcp_toolsV2.py  hapi_mcp.py  main.py  requirement.txt
src/web/: healthAgentAPI.py  requirement.txt  rest_client.py  start.py
